<resources>
    <string name="app_name">My Schedule</string>
    <string name="widget_current_desc">Показывает текущее занятие</string>
    <string name="widget_list_desc">Показывает список занятий на сегодня</string>
    <string name="shortcut_share_short">Поделиться</string>
    <string name="shortcut_share_long">Поделиться расписанием</string>
    <string name="shortcut_import_short">Импорт</string>
    <string name="shortcut_import_long">Импортировать расписание</string>
    <string name="shortcut_watch_short">На часы</string>
    <string name="shortcut_watch_long">Отправить на часы</string>
</resources>